// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Payments Gas Tests Individual Command Tests gas: SWEEP with ERC20 1`] = `
Object {
  "calldataByteLength": 356,
  "gasUsed": 37295,
}
`;

exports[`Payments Gas Tests Individual Command Tests gas: SWEEP_WITH_FEE 1`] = `
Object {
  "calldataByteLength": 516,
  "gasUsed": 66060,
}
`;

exports[`Payments Gas Tests Individual Command Tests gas: TRANSFER with ERC20 1`] = `
Object {
  "calldataByteLength": 356,
  "gasUsed": 36199,
}
`;

exports[`Payments Gas Tests Individual Command Tests gas: TRANSFER with ETH 1`] = `
Object {
  "calldataByteLength": 356,
  "gasUsed": 31708,
}
`;

exports[`Payments Gas Tests Individual Command Tests gas: UNWRAP_WETH 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 44910,
}
`;

exports[`Payments Gas Tests Individual Command Tests gas: UNWRAP_WETH_WITH_FEE 1`] = `
Object {
  "calldataByteLength": 644,
  "gasUsed": 51219,
}
`;

exports[`Payments Gas Tests Individual Command Tests gas: WRAP_ETH 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 53601,
}
`;
